Bug fix - Battle log overflow was higing new log

--- a/style.css
+++ b/style.css
@@ -96,12 +96,12 @@ header p {
 }
 
 #swordKnightStats.active {
-    height: auto;
+    height: 7rem;
     opacity: 1;
 }
 
 #tigerStats.active {
-    height: auto;
+    height: 7rem;
     opacity: 1;
 }
 
@@ -113,7 +113,7 @@ header p {
 }
 
 #archerStats.active {
-    height: auto;
+    height: 7rem;
     opacity: 1;
 }
 
@@ -125,7 +125,7 @@ header p {
 }
 
 #axeStats.active {
-    height: auto;
+    height: 7rem;
     opacity: 1;
 }
 
@@ -137,7 +137,7 @@ header p {
 }
 
 #horseStats.active {
-    height: auto;
+    height: 7rem;
     opacity: 1;
 }
 
@@ -149,7 +149,7 @@ header p {
 }
 
 #pikeStats.active {
-    height: auto;
+    height: 7rem;
     opacity: 1;
 }
 
@@ -158,6 +158,7 @@ header p {
     width: 100%;
     height: 0;
     opacity: 0;
+
 }
 
 
@@ -165,7 +166,6 @@ header p {
     text-align: center;
     font-weight: 600;
     padding-top: 1rem;
-    transition: 0.3s ease-in;
     overflow: hidden;
     height: 1.5rem;
 }
@@ -173,38 +173,38 @@ header p {
 /* Player Selection */
 
 #swordKnight.active {
-    height: 16rem;
-    width: 12rem;
+    height: 13rem;
+    width: 9.5rem;
     box-shadow: 0 10px 10px rgb(130, 131, 130);
 }
 
 #axeKnight.active {
-    height: 16rem;
-    width: 12rem;
+    height: 13rem;
+    width: 9.5rem;
     box-shadow: 0 10px 10px rgb(130, 131, 130);
 }
 
 #knight.active {
-    height: 16rem;
-    width: 12rem;
+    height: 13rem;
+    width: 9.5rem;
     box-shadow: 0 10px 10px rgb(130, 131, 130);
 }
 
 #pikeKnight.active {
-    height: 16rem;
-    width: 12rem;
+    height: 13rem;
+    width: 9.5rem;
     box-shadow: 0 10px 10px rgb(130, 131, 130);
 }
 
 #tigerKnight.active {
-    height: 16rem;
-    width: 12rem;
+    height: 13rem;
+    width: 9.5rem;
     box-shadow: 0 10px 10px rgb(130, 131, 130);
 }
 
 #archer.active {
-    height: 16rem;
-    width: 12rem;
+    height: 13rem;
+    width: 9.5rem;
     box-shadow: 0 10px 10px rgb(130, 131, 130);
 }
 
@@ -226,7 +226,6 @@ header p {
     z-index: 100;
     width: 100%;
     transition: 0.5s ease-in;
-    opacity: 1;
 }
 
 #hide.active {
@@ -333,16 +332,17 @@ header p {
 
 #battleLogContainer {
     width: 100%;
-    height: auto;
+    height: 14rem;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 1.5rem 0;
+    padding-top: 2rem;
 }
 
 #battleLog {
     width: 90%;
-    height: 15rem;
+    height: 100%;
     background-color: rgb(185, 185, 185);
     border-radius: 10px;
     display: flex;
@@ -352,6 +352,9 @@ header p {
     overflow: scroll;
     border: 1px solid rgb(10, 10, 0);
     box-shadow: 0 5px 5px rgb(193, 193, 193);
+    transition: 0.3s;
+    padding-top: 2rem;
+
 }
 
 #battleLog p {
